Correction z-index css popup.
Pop-up qui ne passait plus au premier plan.
Z-index: 2 à la place de 1.

--- a/fabrique/static/css/commander.css
+++ b/fabrique/static/css/commander.css
@@ -128,7 +128,7 @@
   transition: opacity 500ms;
   visibility: hidden;
   opacity: 0;
-  z-index: 1;
+  z-index: 2;
   overflow-y: scroll; /* Nécessaire pour pouvoir scroller dans la popup */
   height: 100%; /* Nécessaire pour pouvoir scroller dans la popup */
 }
